# bykcli-pre

./: .gitignore  pyproject.toml
src/bykclipre/: main.py
src/bykclipreai/: cli.py
src/bykclipreedu/: __init__.py  guard.py  output.py
src/bykclipreedu/pick/: cli.py  controller.py  service.py
src/bykclipreedu/slide/: cli.py  controller.py  service.py
src/bykclipreedu/utils/: files.py
src/bykclipreedu/web/: R.py  app.py
src/bykcliprelansend/: __init__.py  app.py  bootstrap.py
src/bykcliprelansend/cli/: __init__.py  launcher.py  ui.py  validators.py
src/bykcliprelansend/common/: __init__.py  config.py  response.py  web.py
src/bykcliprelansend/features/: __init__.py
src/bykcliprelansend/features/chat/: controller.py  service.py  store.py
src/bykcliprelansend/features/files/: __init__.py  controller.py  service.py
src/bykcliprelansend/features/speedtest/: __init__.py  controller.py
src/bykcliprelansend/features/upload/: __init__.py  controller.py  service.py
web-ui/: package.json  pnpm-lock.yaml
web-ui/scripts/: flatten-dist.mjs
web-ui/src/pages/lansend/: App.vue
web-ui/src/pages/lansend/components/: PreviewTab.vue
web-ui/src/pages/lansend/composables/: useLansendPreview.ts
